Fixed the illegal forward reference